--- a/package.json
+++ b/package.json
@@ -18,8 +18,16 @@
 	},
 	"homepage": "https://github.com/RadhiFadlillah/solar.js#readme",
 	"devDependencies": {
+		"@types/jest": "^27.0.3",
 		"esbuild": "^0.13.14",
+		"jest": "^27.3.1",
+		"ts-jest": "^27.0.7",
 		"typescript": "^4.5.2"
 	},
-	"scripts": {}
+	"scripts": {
+		"test": "jest"
+	},
+	"jest": {
+		"preset": "ts-jest"
+	}
 }
